--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     margin: 0;
     padding: 0;
     backdrop-filter: blur(15px);
+    
 }
 
 .scrolling-bar {
@@ -442,4 +443,203 @@ footer p {
 
 .social-button-foot a {
     background: none !important; 
+}
+
+
+/* //register page */
+.para1
+{
+/*font-family: 'Dancing Script', cursive;
+font-family: 'Kaushan Script', cursive;*/
+    font-family: 'Lato', sans-serif;
+font-size:18px;
+    color: #565557;
+        font-weight: 500;
+/*text-shadow: 3px 3px 6px black;*/
+}
+.container
+{
+	margin:5% auto 0 auto;
+	width:65%;
+	background: rgba(255, 255, 255, .6) url(../img/light-toast.png) repeat left top;
+	
+	border-radius: 20px;
+	margin-bottom:40px;
+	
+}
+
+h2,.para1
+{
+	text-align:center;
+
+}
+h2
+{
+	margin-top:0;
+	padding-top:20px;
+	font-family: 'Montserrat Alternates', sans-serif;
+	font-size:25px;
+	    color: #364775;
+	
+}
+input[type="radio"]
+{
+	outline: transparent;
+}
+.border-up
+{
+	border-top:4px solid rgb(59, 50, 81);
+	margin-bottom:3px;
+}
+.border-down
+{
+	border-top:2px solid rgb(59, 50, 81);
+	margin-bottom:2%;
+}
+
+.contact
+{
+	margin-top:3%;
+	margin-bottom:10px;
+	font-family: 'PT Sans', sans-serif;
+	
+	letter-spacing:2px;
+	font-size:20px;
+	font-weight: bold;
+    color: #364775;
+	
+	
+}
+.newsletter
+{
+	font-family: 'PT Sans', sans-serif;
+	font-weight: bold;
+    color: #364775;
+	letter-spacing:2px;
+	font-size:20px;
+
+}
+fieldset
+{
+	border:0;
+}
+label
+{
+	font-family: 'Maven Pro', sans-serif;
+}
+.border_3
+{
+	border-top:2px solid navy;
+	margin-bottom:25px;
+}
+
+input[type="text"],input[type="email"],input[type="tel"],select,#zip
+{
+	width:100%;
+	margin-bottom:2%;
+	margin-top:1%;
+	height:40px;
+	border-radius:5px;
+	background-color: #eeeff1;
+	 border: 2px solid transparent;
+	 font-family: 'Maven Pro', sans-serif;
+	 
+}
+
+textarea
+{
+	width:100%;
+	margin-bottom:1%;
+	border-radius:5px;
+	background-color: #eeeff1;
+	border: 2px solid transparent;
+	font-family: 'Maven Pro', sans-serif;
+}	 
+input[placeholder]
+{
+	text-align:right;
+	padding-right:10px;
+	font-family: 'Roboto Condensed', sans-serif;
+	letter-spacing:2px;
+}
+input[type="checkbox"]
+{
+	cursor:pointer;
+	
+}
+.dis
+{
+	font-family: 'Roboto Condensed', sans-serif;
+	letter-spacing:2px;
+	padding-left:10px;
+	
+}
+
+#zip
+{
+	width:50%;
+	height:40px;
+	border-radius:5px;
+}
+input[type="text"]:focus,input[type="email"]:focus,input[type="tel"]:focus,input[type=number]:focus,select:focus,textarea:focus,#zip:focus
+{
+	/* border :2px solid rgb(211, 56, 198); */
+	outline:none;
+	   
+    border: 3px solid #4a597d;
+    background-color: #cdd9e8;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+
+}
+#state {
+   /*-webkit-appearance: menulist-button;*/
+   line-height: 30px;
+   background-image: url(../img/arrow.png);
+    background-repeat: no-repeat;
+    background-position: 98% 50%;
+      -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button 
+{ 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+button
+{
+	padding-top:10px;
+	padding-bottom:10px;
+	width:34%;
+	border-radius:5px;
+	border: 2px solid transparent;
+	background-color:rgb(59, 50, 81);
+	font-family: 'Maven Pro', sans-serif;
+	font-style: oblique;
+	font-weight:900;
+	font-size:25px;
+	margin:0 0 0 33%;
+    color: white;
+
+}
+.round{
+	width:20px;
+	border-radius:50%;
+	color:white;
+	background-color:turquoise;
+	margin-right:10px;
+	text-align:center;
+}
+button:focus,button:hover
+{
+	outline:none;
+	background-color:white;
+	cursor:pointer;
+	color:rgb(59, 50, 81);
 }
